manifests/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default
  labels:
    app: petclinic
spec:
  type: LoadBalancer
  selector:
    app: petclinic
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
